versioned_docs/version-7.4.0/api/lineStrings.mdx
---
title: lineStrings
---

import * as turf from "turf-next";
import ExampleMap from "@site/src/components/ExampleMap";
import WindowTurfGlobal from "@site/src/components/WindowTurfGlobal";
import BrowserOnly from "@docusaurus/BrowserOnly";

### Description

Creates a [LineString](https://tools.ietf.org/html/rfc7946#section-3.1.4) [FeatureCollection](https://tools.ietf.org/html/rfc7946#section-3.3) from an Array of LineString coordinates.

### Parameters

| Name                 | Type                                                                                            | Description                                                                         |
| -------------------- | ----------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------- |
| coordinates          | **UNCERTAIN**                                                                                   |                                                                                     |
| properties<i>?</i>   | **[GeoJsonProperties](https://tools.ietf.org/html/rfc7946#section-3.2)**                        | an Object of key-value pairs to add as properties _(default &#123;&#125;)_          |
| options<i>?</i>      | **[Object](https://developer.mozilla.org/docs/Web/JavaScript/Reference/Global_Objects/Object)** | Optional Parameters _(default &#123;&#125;)_                                        |
| options.bbox<i>?</i> | **[BBox](https://tools.ietf.org/html/rfc7946#section-5)**                                       | Bounding Box Array [west, south, east, north] associated with the FeatureCollection |
| options.id<i>?</i>   | **Id**                                                                                          | Identifier associated with the FeatureCollection                                    |

### Returns

**[FeatureCollection](https://tools.ietf.org/html/rfc7946#section-3.3)&lt;[LineString](https://tools.ietf.org/html/rfc7946#section-3.1.4), [GeoJsonProperties](https://tools.ietf.org/html/rfc7946#section-3.2)&gt;** LineString FeatureCollection

### Examples

```javascript
var linestrings = turf.lineStrings([
  [
    [-24, 63],
    [-23, 60],
    [-25, 65],
    [-20, 69],
  ],
  [
    [-14, 43],
    [-13, 40],
    [-15, 45],
    [-10, 49],
  ],
]);

//=linestrings
```

### Installation

```javascript
$ npm install @turf/helpers

import { lineStrings } from "@turf/helpers";
const result = lineStrings(...);
```

```javascript
$ npm install @turf/turf

import * as turf from "@turf/turf";
const result = turf.lineStrings(...);
```

<!-- Expose turf as global var for experimenting in the browser console -->

<BrowserOnly>{() => <WindowTurfGlobal turf={turf} />}</BrowserOnly>
